@@ -11,6 +11,8 @@ Post-v2.16.0
      * EAL argument --in-memory is applied by default if supported.
      * Add hardware offload support for matching IPv4/IPv6 frag types
        (experimental).
+     * Add hardware offload support for GRE flows (experimental).
+       Available only if DPDK experimantal APIs enabled during the build.
      * Add support for DPDK 21.11.
    - Python:
      * For SSL support, the use of the pyOpenSSL library has been replaced
